# bizytrd

./: README.md  __init__.py  models_registry.json  models_registry_doubao_remaining.json  models_registry_flux.json  models_registry_gemini.json  models_registry_gpt.json  models_registry_happyhorse.json  models_registry_kling.json  models_registry_llm.json  models_registry_migrated.json  models_registry_veo.json  models_registry_vidu.json  models_registry_vlm.json  pyproject.toml
bizytrd/: __init__.py  models_registry.json
bizytrd/core/: result.py
bizytrd/core/adapters/: engine.py  transforms.py  validators.py
bizytrd/nodes/: __init__.py  node_factory.py
bizytrd/web/js/: dynamic_inputs.js
bizytrd_sdk/: __init__.py  _version.py  client.py  config.py  errors.py  types.py
core/: __init__.py  adapters.py  base.py  config.py  config_compat.py  result.py  task.py  upload.py  upload_compat.py
core/adapters/: dsl.py  engine.py  transforms.py  validators.py
core/hooks/: __init__.py  base.py  common.py  doubao.py  gemini.py  gpt.py  siliconflow.py  wan.py
docs/: 2026-04-15-handoff.md  2026-04-17-design-development-review.md  2026-04-17-handoff.md  ADAPTERS.md  BIZYTRD_SDK_GUIDE.md  MODELS_REGISTRY_GUIDE.md
nodes/: node_factory.py
nodes/manual/: __init__.py  config.py
registrys/: models_registry_gpt.json  models_registry_grok.json  models_registry_hailuo.json  models_registry_wan.json
scripts/: add_channel_param.py  generate_migrated_registry.py
tests/: test_adapters.py  test_base_skip_error_placeholders.py  test_gpt_registry.py  test_manual_nodes.py  test_migrated_registry.py  test_node_factory.py  test_sdk_audio_outputs.py  test_sdk_config.py  test_source_layout_import.py  test_task_module_cleanup.py
web/js/: dynamic_inputs.js
(+1 files in other folders)
